fix: add missing Atkinson Hyperlegible font-face definition to custom CSS

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -50,3 +50,11 @@
   font-style: normal;
     font-display: block;
 }
+
+@font-face {
+  font-family: 'Atkinson Hyperlegible';
+  src: url('/fonts/AtkinsonHyperlegible-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: block;
+}
